Use API_URL for auth link

--- a/src/view/index.html
+++ b/src/view/index.html
@@ -36,7 +36,7 @@
 </head>
 
 <body>
-  <a id='login' href='/auth' target='_blank'>Login</a>
+  <a id='login' href='<%= API_URL %>/auth' target='_blank'>Login</a>
   <div class='body-item' id='repos'></div>
   <div class='body-item'>
     <div id='repo'></div>
